--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-calendar-strip": "^2.2.5",
+    "react-native-calendars": "^1.1270.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
