--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^4.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "jetifier": "^2.0.0",
@@ -19,6 +20,7 @@
     "react-native-calendar-strip": "^2.2.5",
     "react-native-calendars": "^1.1270.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen": "^1.0.1",
