--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'noted' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'notedTests' do
     inherit! :complete
     # Pods for testing
