--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-calendar-strip": "^2.2.5",
     "react-native-calendars": "^1.1270.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.4.0",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
