--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^3.9.0",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
