--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-audio-recorder-player": "^3.3.0",
     "react-native-calendar-strip": "^2.2.5",
     "react-native-calendars": "^1.1270.0",
     "react-native-gesture-handler": "^1.10.3",
