--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@react-native-community/datetimepicker": "^4.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "fbjs": "^0.8.18",
     "jetifier": "^2.0.0",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-audio-recorder-player": "^3.3.0",
+    "react-native-blob-util": "^0.13.17",
     "react-native-calendar-strip": "^2.2.5",
     "react-native-calendars": "^1.1270.0",
-    "react-native-document-picker": "^7.1.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.4.0",
     "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-pdf": "^6.4.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen": "^1.0.1",
