--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.66.3",
     "react-native-calendar-strip": "^2.2.5",
     "react-native-calendars": "^1.1270.0",
+    "react-native-document-picker": "^7.1.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.4.0",
     "react-native-modal-datetime-picker": "^13.0.0",
