--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'noted'
-include ':react-native-audio-recorder-player'
-project(':react-native-audio-recorder-player').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-audio-recorder-player/android')
+include ':react-native-pdf'
+project(':react-native-pdf').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-pdf/android')
 include ':react-native-pdf'
 project(':react-native-pdf').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-pdf/android')
 include ':react-native-blob-util'
