--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,8 @@ target 'noted' do
 
   pod 'RNAudioRecorderPlayer', :path => '../node_modules/react-native-audio-recorder-player'
 
+  pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
+
   target 'notedTests' do
     inherit! :complete
     # Pods for testing
