--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "fbjs": "^0.8.18",
     "jetifier": "^2.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
