--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "rn-keyboard-sticky-view": "^1.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
