--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "^4.0.1",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
@@ -26,17 +27,16 @@
     "react-native-calendar-strip": "^2.2.5",
     "react-native-calendars": "^1.1270.0",
     "react-native-document-picker": "^7.1.1",
-    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.4.0",
     "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-pdf": "^6.4.0",
-    "react-native-reanimated": "^2.2.4",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "rn-keyboard-sticky-view": "^1.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
