--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
         kotlinVersion = '1.5.0'
+        androidXCore = "1.7.0"
     }
     repositories {
         google()
