--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.4.0",
     "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-paper": "^4.11.1",
     "react-native-pdf": "^6.4.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.3.2",
