--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "react-redux": "^7.2.5",
+    "@reduxjs/toolkit": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
