--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,10 @@ buildscript {
         ndkVersion = "21.4.7075529"
         kotlinVersion = '1.5.0'
         androidXCore = "1.7.0"
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+        supportLibVersion = "23.1.1" // default: 23.1.1
+        
     }
     repositories {
         google()
@@ -19,6 +23,8 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.google.gms:google-services:4.3.10'
+        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
