--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services'
 
 import com.android.build.OutputFile
 
@@ -233,7 +234,7 @@ dependencies {
         implementation jscFlavor
     }
 
-    
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
 }
 
 // Run this once to be able to run the application with BUCK
