--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "^4.0.1",
     "@react-native-community/netinfo": "^7.1.6",
+    "@react-native-firebase/app": "^14.1.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.24.0",
     "fbjs": "^0.8.18",
     "jetifier": "^2.0.0",
@@ -33,15 +35,15 @@
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-pdf": "^6.4.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "uuid": "^8.3.2",
     "react-redux": "^7.2.5",
-    "@reduxjs/toolkit": "^1.6.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
